[gd_scene load_steps=8 format=3 uid="uid://djgq5xpgr2x88"]

[ext_resource type="Texture2D" uid="uid://b2wo15vp0jhxi" path="res://dfn55mv-7b57012b-b6a7-44e2-b5c0-0a405972d997.png" id="1_4bqly"]
[ext_resource type="Script" uid="uid://rvb5tvy7y0ke" path="res://minigame.gd" id="1_gdft7"]
[ext_resource type="Texture2D" uid="uid://dpq13e52ceay7" path="res://pointer.png" id="2_k7ghj"]
[ext_resource type="Script" uid="uid://dt3nc4our1mgp" path="res://node_2d.gd" id="2_oemwr"]
[ext_resource type="Script" uid="uid://db3copx8l4643" path="res://node_2d_2.gd" id="3_176e0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oemwr"]
size = Vector2(37.660774, 27.800926)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_176e0"]

[node name="Node2D" type="Node2D"]
position = Vector2(0, 32)
script = ExtResource("1_gdft7")

[node name="Button" type="Button" parent="."]
offset_left = 326.0
offset_top = 34.0
offset_right = 826.0
offset_bottom = 534.0
focus_mode = 0
theme_override_font_sizes/font_size = 96
text = "PRESS"
flat = true
metadata/_edit_use_anchors_ = true

[node name="Dfn55Mv7b57012bB6a744e2B5c00a405972d997" type="Sprite2D" parent="."]
position = Vector2(576, 284)
scale = Vector2(0.45, 0.45)
texture = ExtResource("1_4bqly")

[node name="Dfn55Mv7b57012bB6a744e2B5c00a405972d998" type="Sprite2D" parent="."]
position = Vector2(576, 284)
scale = Vector2(0.39, 0.39)
texture = ExtResource("1_4bqly")

[node name="Node2D2" type="Node2D" parent="."]
position = Vector2(574, 283)
scale = Vector2(1.0833346, 1.0833342)
script = ExtResource("3_176e0")

[node name="Polygon2D3" type="Polygon2D" parent="Node2D2"]
position = Vector2(-1.5258789e-05, 185.53833)
rotation = -2.2549653
offset = Vector2(-700.63403, -384)
polygon = PackedVector2Array(679.5384, 390.61536, 697.07684, 404.46152, 722, 376, 703.5384, 362.92307)

[node name="Area2D" type="Area2D" parent="Node2D2/Polygon2D3"]
position = Vector2(1.8461323, -1.8461132)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D2/Polygon2D3/Area2D"]
position = Vector2(-1.8461239, 1.846122)
rotation = 2.2165682
shape = SubResource("RectangleShape2D_oemwr")

[node name="Spinningthing" type="Node2D" parent="."]
position = Vector2(580.99994, 284)
rotation = 0.6789331
script = ExtResource("2_oemwr")

[node name="Pointer" type="Sprite2D" parent="Spinningthing"]
position = Vector2(174.64337, 9.419262)
texture = ExtResource("2_k7ghj")

[node name="Area2D" type="Area2D" parent="Spinningthing"]
position = Vector2(47.05963, 12.140575)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spinningthing/Area2D"]
position = Vector2(158.97107, -3.633772)
shape = SubResource("RectangleShape2D_176e0")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="area_entered" from="Node2D2/Polygon2D3/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Node2D2/Polygon2D3/Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
